Fix overflow-x issue on TechHQ frontpage

--- a/universalSCSS/styling.scss
+++ b/universalSCSS/styling.scss
@@ -17,6 +17,7 @@ body {
 
   .mainSection {
     flex-grow: 1;
+    max-width: 100%;
   }
 }
 
@@ -29,6 +30,7 @@ i.fas {
   margin-top: auto;
   margin-bottom: auto;
   @include padding(0, 0, 0, 10px);
+
   a:link {
     text-decoration: none;
     color: inherit;
@@ -41,18 +43,18 @@ a:visited {
   color: $navy;
 }
 
-
 .card-header {
-    color: $white;
-    background-color: $BGColor;
-    font-weight: bold;
-    font-size: 20px;
+  color: $white;
+  background-color: $BGColor;
+  font-weight: bold;
+  font-size: 20px;
 
-            a:link, a:visited {
-            background-color: transparent;
-            color: white;
-        }
-    }
+  a:link,
+  a:visited {
+    background-color: transparent;
+    color: white;
+  }
+}
 
 code {
   color: $white;
@@ -84,10 +86,13 @@ nav {
     // The main padding for nav seems to be handled by boostrap's CSS and I do not have to touch it
     font-weight: bold;
     @include padding(0, 0, 0, 10px);
-  } // This is for the navigation menus on the right, when at full screen
+  }
+
+  // This is for the navigation menus on the right, when at full screen
   .navbar-nav a:link {
     font-size: 22px;
   }
+
   .nav-tabs {
     background-color: $white;
   }
@@ -131,6 +136,7 @@ h3.feed-title {
 .feed-item-title {
   // This controls the padding the links
   @include padding(1%, 1%, 0, 5px);
+
   a:link,
   a:hover,
   a:visited {
@@ -165,7 +171,6 @@ h3.feed-title {
   vertical-align: middle;
 }
 
-
 // For Image "Thumbnailing" in various sections
 // Example - Screenshots on Linux Distro and Desktop homepages
 .thumbnails {
@@ -173,22 +178,18 @@ h3.feed-title {
   max-height: 450px;
 }
 
-.carousel
-{
+.carousel {
   height: 90%;
   width: 90%;
   min-height: 325px;
 
-  .carousel-control-prev, .carousel-control-next
-  {
+  .carousel-control-prev,
+  .carousel-control-next {
     width: 56%;
   }
 
-  .carousel-item img
-  {
-
+  .carousel-item img {
     max-width: 500px;
     max-height: 500px;
   }
-
 }
